Fixed menu spacing for mobile

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -299,7 +299,7 @@ img {
         margin: 0 0.5em;
         @media (max-width: @small) {
             font-size: 1em;
-            margin: 0 0.25em;
+            margin: 0 0;
         }
     }
     a {
